--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
-    </noscript>
+    </noscript>    
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -36,5 +36,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: 25.768, lng: -80.1918},
+          zoom: 12
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4ZzMX_7mndy2PGSdWUn1TCsFFBXNsFSs&callback=initMap"
+    async defer></script> -->
   </body>
 </html>
